--- a/RestaurantAPI/appsettings.json
+++ b/RestaurantAPI/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "RestaurantDbConnection": "Server=tcp:restaurant-dbserver.database.windows.net,1433;Initial Catalog=RestaurantDb;Persist Security Info=False;User ID=restaurant-admin;Password=password123,;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "AllowedOrigins": "http://localhost:8080",
   "Authentication": {
     "JwtKey": "PRIVATE_KEY_DONT_SHARE_PRIVATE_KEY_DONT_SHARE",
     "JwtExpireDays": 15,
-    "JtwIssuer": "http://restaurantapi.com"
+    "JwtIssuer": "http://restaurantapi.com"
   },
   "Logging": {
     "LogLevel": {
