--- a/RestaurantAPI/appsettings.json
+++ b/RestaurantAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RestaurantDbConnection": "Server=tcp:restaurant-dbserver.database.windows.net,1433;Initial Catalog=RestaurantDb;Persist Security Info=False;User ID=restaurant-admin;Password=password123,;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "RestaurantDbConnection": ""
   },
   "AllowedOrigins": "http://localhost:8080",
   "Authentication": {
