Added readme.md file

--- a/RestaurantAPI/appsettings.json
+++ b/RestaurantAPI/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "RestaurantDbConnection": ""
+    "RestaurantDbConnection": "your_connection_string"
   },
-  "AllowedOrigins": "http://localhost:8080",
+  "AllowedOrigins": "http://your-frontend-origin",
   "Authentication": {
-    "JwtKey": "PRIVATE_KEY_DONT_SHARE_PRIVATE_KEY_DONT_SHARE",
+    "JwtKey": "your_jwt_key",
     "JwtExpireDays": 15,
-    "JwtIssuer": "http://restaurantapi.com"
+    "JwtIssuer": "your_jwt_issuer"
   },
   "Logging": {
     "LogLevel": {
